# owl_eye

./: .gitignore  README.md  pyproject.toml
codes/: download_files.py  dscovr_07days_all.py  field_line_trace.py  run_file.sh  run_file_cosmere.sh  run_file_cosmere_mag.sh  sw_rt_ace_1day.py  sw_rt_ace_2hr.py  sw_rt_dsvr_1day.py  sw_rt_dsvr_2hr.py  sw_rt_ts_dwld_upld_dscovr_07days_automated.py  sw_rt_ts_mp4_dscovr.py
