[tool.poetry]
name = "owl-eye"
version = "0.1.0"
description = "Repository for all things related to OWL EYE"
authors = ["qudsiramiz <qudsiramiz@gmail.com>"]
readme = "README.md"
packages = [{include = "owl_eye"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "1.24.0"
scipy = "^1.14.0"
pandas = "^2.2.2"
imageio = "^2.34.2"
geopack = "^1.0.10"
imageio-ffmpeg = "^0.5.1"
matplotlib = "3.5.1"
astropy = "^6.1.2"
skyfield = "^1.49"
ephem = "^4.1.5"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
